# docs2db

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  scorecard.yml
docs/: DESIGN.md  INTEGRATION.md  LLM_PROVIDERS.md  METADATA.md
scripts/: rag_demo_client.py
src/docs2db/: __init__.py  audit.py  chunks.py  config.py  const.py  database.py  db_lifecycle.py  docs2db.py  embed.py  embeddings.py  ingest.py  multiproc.py  utils.py
tests/: conftest.py  test_cli_integration.py  test_config.py  test_database.py  test_db_config.py  test_document_needs_update.py  test_high_level_integration.py  test_rag_core.py  test_schema_metadata.py
tests/fixtures/: test_document.chunks.json  test_document.granite-30m-english.json  test_document.json
tests/fixtures/content/documents/: test_document.chunks.json  test_document.gran.json  test_document.json
tests/fixtures/content/documents/test_document/: chunks.json  gran.json  meta.json
tests/fixtures/input/data/: DOE_Facilities_Inventory_2014_16_06.csv  addisababa_rooftop_solarpotential_v1.csv
tests/fixtures/input/data/spreadsheets/: IEALifeCycleUpstreamEmissionFactors2023-PilotEdition.XLS  lcremultipliersdataset.xls  renewables.xlsx
tests/fixtures/input/documents/: 24_Bioenergy-thestrongestrenewableenergysourceinFinland.doc  Open Energy Data Initiative.md  Open_Source_and_Open_Data_in_energy_syst.txt  Renewable Energy Checklist.doc  Solar Energy.doc  nrel.rtf
tests/fixtures/input/documents/presentations/: Renewable Energy Sources.ppt  The-Economics-of-Renewable-Energy-slides.pptx
tests/fixtures/input/web/pages/: CHAPTER 1. RENEWABLE ENERGY OVERVIEW.htm  renewable-energy.html
